[gd_scene load_steps=21 format=3 uid="uid://d2hiaspa3oe40"]

[ext_resource type="Script" path="res://scripts/Browser.gd" id="1_njjpb"]
[ext_resource type="Theme" uid="uid://cyrgleki50jp0" path="res://assets/themes/MainTheme.tres" id="2_k134c"]
[ext_resource type="Texture2D" uid="uid://clojwtypry74v" path="res://assets/images/Wallpapers/PixelOS8Default.png" id="3_634u8"]
[ext_resource type="Script" path="res://scripts/TabScript.gd" id="3_gi8t7"]
[ext_resource type="FontFile" uid="uid://ch73fhxmnt3qt" path="res://assets/fonts/Poppins-SemiBold.ttf" id="3_gxs2f"]
[ext_resource type="Script" path="res://scripts/PixelosTabScript.gd" id="5_7jfsc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_clp3s"]
bg_color = Color(0.203922, 0.203922, 0.203922, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mslii"]
bg_color = Color(0.105882, 0.105882, 0.105882, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xnha6"]
bg_color = Color(0.6, 0.0313726, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nj5av"]
bg_color = Color(0.52549, 0.00392157, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_45g3p"]
bg_color = Color(0.878431, 0, 0.0666667, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5ccj"]
bg_color = Color(0.262745, 0.262745, 0.262745, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_77qeo"]
bg_color = Color(0.517647, 0.498039, 0.521569, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f56ce"]
bg_color = Color(0.67451, 0.67451, 0.67451, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w7sxr"]
texture = ExtResource("3_634u8")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ulcm"]
bg_color = Color(0.0862745, 0.207843, 0.27451, 1)

[sub_resource type="FontVariation" id="FontVariation_k7wjk"]
base_font = ExtResource("3_gxs2f")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d4gft"]
bg_color = Color(0.0862745, 0.207843, 0.27451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yhibe"]
bg_color = Color(0.156863, 0.380392, 0.501961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_26inh"]
bg_color = Color(0.0588235, 0.137255, 0.184314, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_njjpb")

[node name="Browser" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -886.5
offset_top = -552.0
offset_right = 886.5
offset_bottom = 552.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_clp3s")

[node name="Toolbar" type="Panel" parent="Browser"]
layout_mode = 0
offset_right = 1773.0
offset_bottom = 55.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mslii")

[node name="Browser_X" type="Button" parent="Browser/Toolbar"]
layout_mode = 0
offset_left = 1726.0
offset_top = 9.0
offset_right = 1764.0
offset_bottom = 47.0
theme_override_styles/normal = SubResource("StyleBoxFlat_xnha6")
theme_override_styles/hover = SubResource("StyleBoxFlat_nj5av")
theme_override_styles/pressed = SubResource("StyleBoxFlat_45g3p")
text = "X"

[node name="Tabs" type="HBoxContainer" parent="Browser/Toolbar"]
layout_mode = 0
offset_left = 54.0
offset_top = 7.0
offset_right = 1664.0
offset_bottom = 47.0

[node name="Tab" type="Button" parent="Browser/Toolbar/Tabs"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_k134c")
text = "Tab"
script = ExtResource("3_gi8t7")

[node name="Dragger" type="Button" parent="Browser/Toolbar"]
layout_mode = 0
offset_right = 51.0
offset_bottom = 53.0
focus_mode = 0
flat = true

[node name="Browser_M" type="Button" parent="Browser/Toolbar"]
layout_mode = 0
offset_left = 1675.0
offset_top = 9.0
offset_right = 1713.0
offset_bottom = 47.0
theme_override_styles/normal = SubResource("StyleBoxFlat_b5ccj")
theme_override_styles/hover = SubResource("StyleBoxFlat_77qeo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f56ce")
text = "__"

[node name="Websites" type="Control" parent="Browser"]
anchors_preset = 0
offset_left = 14.0
offset_top = 109.0
offset_right = 1760.0
offset_bottom = 1094.0

[node name="0" type="Control" parent="Browser/Websites"]
visible = false
anchors_preset = 0
offset_right = 1734.0
offset_bottom = 973.0

[node name="Panel2" type="Panel" parent="Browser/Websites/0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_w7sxr")

[node name="Panel" type="Panel" parent="Browser/Websites/0"]
layout_mode = 0
offset_right = 1734.0
offset_bottom = 56.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3ulcm")

[node name="Label" type="Label" parent="Browser/Websites/0/Panel"]
layout_mode = 0
offset_left = 25.5
offset_top = 4.0
offset_right = 141.5
offset_bottom = 51.0
theme = ExtResource("2_k134c")
theme_override_font_sizes/font_size = 31
text = "PixelOS"

[node name="HBoxContainer" type="HBoxContainer" parent="Browser/Websites/0/Panel"]
layout_mode = 0
offset_left = 831.0
offset_right = 1737.0
offset_bottom = 56.0
alignment = 2

[node name="Pxlos3" type="Button" parent="Browser/Websites/0/Panel/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_fonts/font = SubResource("FontVariation_k7wjk")
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource("StyleBoxFlat_d4gft")
theme_override_styles/hover = SubResource("StyleBoxFlat_yhibe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_26inh")
text = "PIXELOS 3"
script = ExtResource("5_7jfsc")

[node name="InfoPage" type="Control" parent="Browser/Websites/0"]
anchors_preset = 0
offset_top = 55.0
offset_right = 1732.0
offset_bottom = 967.0

[node name="ScrollContainer" type="ScrollContainer" parent="Browser/Websites/0/InfoPage"]
layout_mode = 0
offset_right = 1729.0
offset_bottom = 915.0

[node name="Control" type="Control" parent="Browser/Websites/0/InfoPage/ScrollContainer"]
layout_mode = 2

[node name="PixelOSDisplay" type="Panel" parent="Browser/Websites/0/InfoPage/ScrollContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 495.5
offset_top = 69.0
offset_right = 1215.5
offset_bottom = 631.0
grow_horizontal = 2
grow_vertical = 2

[node name="Description" type="Label" parent="Browser/Websites/0/InfoPage/ScrollContainer/Control"]
layout_mode = 0
offset_left = 335.0
offset_top = 658.0
offset_right = 1413.0
offset_bottom = 916.0
theme = ExtResource("2_k134c")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "No description avalable."
autowrap_mode = 3

[node name="Name" type="Label" parent="Browser/Websites/0/InfoPage/ScrollContainer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 786.0
offset_top = 13.0
offset_right = 923.0
offset_bottom = 59.0
grow_horizontal = 2
theme = ExtResource("2_k134c")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "PixelOS 8"

[node name="1" type="Control" parent="Browser/Websites"]
anchors_preset = 0
offset_right = 1733.0
offset_bottom = 973.0

[node name="LineEdit" type="LineEdit" parent="Browser/Websites/1"]
layout_mode = 0
offset_left = 568.5
offset_top = 424.0
offset_right = 1132.5
offset_bottom = 496.0

[node name="Button" type="Button" parent="Browser/Websites/1"]
layout_mode = 0
offset_left = 334.5
offset_top = 559.0
offset_right = 476.5
offset_bottom = 661.0
text = "pixelos website"

[node name="AddressBar" type="LineEdit" parent="Browser"]
layout_mode = 0
offset_left = 11.0
offset_top = 62.0
offset_right = 1148.0
offset_bottom = 104.0
theme = ExtResource("2_k134c")
placeholder_text = "Search"

[node name="NewTab" type="Button" parent="Browser"]
layout_mode = 0
offset_left = 1264.0
offset_top = 61.0
offset_right = 1386.0
offset_bottom = 104.0
theme = ExtResource("2_k134c")
text = "New Tab"

[node name="CloseTab" type="Button" parent="Browser"]
layout_mode = 0
offset_left = 1400.0
offset_top = 61.0
offset_right = 1522.0
offset_bottom = 104.0
theme = ExtResource("2_k134c")
text = "Close Tab"

[node name="NewTab2" type="Button" parent="Browser"]
layout_mode = 0
offset_left = 1162.0
offset_top = 61.0
offset_right = 1250.0
offset_bottom = 104.0
theme = ExtResource("2_k134c")
text = "Search"

[connection signal="pressed" from="Browser/Toolbar/Browser_X" to="." method="_on_browser_x_pressed"]
[connection signal="pressed" from="Browser/Toolbar/Browser_M" to="." method="_on_browser_m_pressed"]
[connection signal="pressed" from="Browser/Websites/1/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Browser/NewTab" to="." method="_on_new_tab_pressed"]
[connection signal="pressed" from="Browser/CloseTab" to="." method="_on_close_tab_pressed"]
[connection signal="pressed" from="Browser/NewTab2" to="." method="_on_new_tab_pressed"]
